# apex_robotics_studio

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: ApexRoboticsStudioConfig.cmake.in  CompilerOptions.cmake
cmake/toolchains/: linux-gcc-aarch64.cmake  linux-mingw-w64-x86_64.cmake
docker/: linux-aarch64-cross.Dockerfile  linux-mingw-cross.Dockerfile  linux-x64-dev.Dockerfile
docs/: AdvancedCapabilities.md  ApprovalWorkflowGuide.md  Architecture.md  AuditTrailGuide.md  AutomationFlowGuide.md  BatchOperationsGuide.md  CrossCompilationGuide.md  DeliveryDossierGuide.md  DeploymentAndExtensibility.md  EnterpriseEnhancements_v09.md  EnterpriseEnhancements_v10.md  EnterpriseEnhancements_v11.md  EnterpriseEnhancements_v12.md  EnterpriseEnhancements_v13.md  EnterpriseEnhancements_v14.md  EnterpriseEnhancements_v15.md  EnterpriseEnhancements_v16.md  EnterpriseEnhancements_v17.md  IntegrationExportGuide.md  InterviewGuide.md  JobProgrammingGuide.md  LocalValidationOutput.txt  LocalValidationOutput_v07.txt  LocalValidationOutput_v08.txt  LocalValidationOutput_v09.txt  LocalValidationOutput_v10.txt  LocalValidationOutput_v11.txt  LocalValidationOutput_v12.txt  LocalValidationOutput_v13.txt  LocalValidationOutput_v14.txt  LocalValidationOutput_v15.txt  LocalValidationOutput_v16.txt  LocalValidationOutput_v17.txt  ParameterSweepGuide.md  PluginArchitecture.md  ProjectDiffGuide.md  ProjectFileFormat.md  QtWorkbenchGuide.md  QtWorkbenchGuide_v12.md  QtWorkbenchGuide_v13.md  (+26 more)
samples/: validation_export_ros2_v14.txt  validation_export_ros2_v15.txt  validation_export_ros2_v16.txt  validation_export_ros2_v17.txt  validation_import_v14.txt  validation_import_v15.txt  validation_import_v16.txt  validation_import_v17.txt  validation_inspect_json_v17.txt  validation_inspect_v17.txt  validation_tree_v15.txt  validation_tree_v17.txt  validation_workspace_doctor_v17.txt
samples/batches/: demo_production_validation.arsbatch
samples/diff/: demo_workcell_patch_diff_v08.txt
samples/flows/: demo_workflow_v11.arsflow
samples/gates/: demo_release_gate_v08.html
samples/ros2/generated_v13/apex_ros2_ws/src/demo_painter_cell_imported_project_moveit_config/: CMakeLists.txt  package.xml
samples/ros2/generated_v13/apex_ros2_ws/src/demo_painter_cell_imported_project_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
samples/ros2/generated_v13/apex_ros2_ws/src/demo_painter_cell_imported_project_moveit_config/launch/: demo_moveit.launch.py
samples/ros2/generated_v13/apex_ros2_ws/src/demo_painter_cell_imported_project_moveit_config/src/: apex_moveit_smoke_test.cpp
samples/ros2/generated_v13/apex_ros2_ws/src/demo_painter_cell_imported_project_moveit_config/srdf/: apex_generated.srdf
samples/ros2/generated_v14/apex_ros2_ws/src/apexpainterv14_imported_project_description/: CMakeLists.txt  package.xml
samples/ros2/generated_v14/apex_ros2_ws/src/apexpainterv14_imported_project_description/launch/: display.launch.py
samples/ros2/generated_v14/apex_ros2_ws/src/apexpainterv14_imported_project_description/rviz/: view_robot.rviz
samples/ros2/generated_v14/apex_ros2_ws/src/apexpainterv14_imported_project_description/urdf/: apexpainterv14.urdf
samples/ros2/generated_v15/apex_ros2_ws/src/apexpainterv15_imported_project_bringup/: CMakeLists.txt  package.xml
samples/ros2/generated_v16/apex_ros2_ws/src/apexpainterv15_imported_project_moveit_config/: package.xml
samples/ros2/generated_v16/apex_ros2_ws/src/apexpainterv15_imported_project_moveit_config/config/: joint_limits.yaml  moveit_cpp.yaml
samples/ros2/generated_v16/apex_ros2_ws/src/apexpainterv15_imported_project_moveit_config/launch/: move_group.launch.py
samples/ros2/generated_v16/apex_ros2_ws/src/apexpainterv15_imported_project_moveit_task_demo/: CMakeLists.txt  package.xml
samples/ros2/generated_v16/apex_ros2_ws/src/apexpainterv15_imported_project_moveit_task_demo/launch/: mtc_demo.launch.py
samples/ros2/generated_v16/apex_ros2_ws/src/apexpainterv16_imported_project_bringup/: package.xml
samples/ros2/generated_v16/apex_ros2_ws/src/apexpainterv16_imported_project_bringup/config/: project.yaml
samples/ros2/generated_v16/apex_ros2_ws/src/apexpainterv16_imported_project_moveit_config/: CMakeLists.txt
samples/ros2/generated_v16/apex_ros2_ws/src/apexpainterv16_imported_project_moveit_config/config/: ros2_controllers.yaml
samples/ros2/generated_v16/apex_ros2_ws/src/apexpainterv16_imported_project_moveit_config/launch/: bringup_with_moveit.launch.py  demo_moveit.launch.py
samples/ros2/generated_v16/apex_ros2_ws/src/apexpainterv16_imported_project_moveit_config/rviz/: moveit_demo.rviz
samples/ros2/generated_v16/apex_ros2_ws/src/apexpainterv16_imported_project_moveit_task_demo/: package.xml
samples/ros2/generated_v16/apex_ros2_ws/src/apexpainterv16_imported_project_moveit_task_demo/config/: task_parameters.yaml
scripts/: bootstrap_ubuntu_cross_toolchains.sh  build_cross_linux_aarch64.sh  build_cross_windows_mingw.sh  build_in_container.sh  build_linux.sh  build_windows_vs2022.bat  package_linux.sh  validate_cross_environment.sh
src/App/: main.cpp
tests/: TestAuditTrail.cpp  TestAutomationFlow.cpp  TestBatchRunner.cpp  TestCollisionWorld.cpp  TestDeliveryDossier.cpp  TestExecutionSession.cpp  TestFramework.h  TestIntegrationExport.cpp  TestJobSimulationEngine.cpp  TestJointTrajectoryPlanner.cpp  TestMain.cpp  TestParameterSweep.cpp  TestProcessRecipe.cpp  TestProjectApproval.cpp  TestProjectAuditPlugin.cpp  TestProjectBundle.cpp  TestProjectCatalog.cpp  TestProjectDiff.cpp  TestProjectPatch.cpp  TestProjectRegression.cpp  TestProjectSnapshot.cpp  TestProjectTemplate.cpp  TestReleaseGate.cpp  TestRobotDescriptionImport.cpp  TestRobotDescriptionImportAdvanced.cpp  TestRobotDescriptionInspector.cpp  TestRos2WorkspaceExport.cpp  TestRuntimeConfig.cpp  TestSerialRobotModel.cpp  TestStudioProjectSerializer.cpp  TestSvgExporter.cpp  TestTrajectoryAnalyzer.cpp  TestUrdfImporter.cpp  TestWorkbenchDashboard.cpp
(+227 files in other folders)
