<package format="3">
  <name>apexpainterv14_imported_project_description</name>
  <version>0.1.0</version>
  <description>Apex Robotics Studio generated robot description package.</description>
  <maintainer email="demo@example.com">Apex Robotics Studio</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
