<package format="3">
  <name>apexpainterv16_imported_project_bringup</name>
  <version>0.1.0</version>
  <description>Apex Robotics Studio generated ROS 2 bringup package.</description>
  <maintainer email="demo@example.com">Apex Robotics Studio</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>apexpainterv16_imported_project_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
